# kzg-ceremony-verifier

./: .gitignore  Cargo.toml  README.md
crypto/: Cargo.toml
crypto/src/: batch_transcript.rs  error.rs  group.rs  lib.rs  powers.rs  spinner.rs  transcript.rs
crypto/src/bls/: g1.rs  g2.rs  mod.rs  scalar.rs
crypto/src/engine/: both.rs  mod.rs
crypto/src/engine/arkworks/: mod.rs  scalar.rs
crypto/src/engine/blst/: g1.rs  mod.rs  scalar.rs
crypto/src/signature/: mod.rs
output_setups/: trusted_setup_16384.json  trusted_setup_32768.json  trusted_setup_8192.json
src/: lib.rs  main.rs
