[package]
version = "0.1.0"
name = "kzg-ceremony-verifier"
description = "Verification of the Ethereum KZG Ceremony transcript"
authors = ["Carl Beekhuizen <mail@carlbeek.com>"]
edition = "2021"

[features]
default = []

[workspace]
members = [
    "crypto",
]

[dependencies]
eyre = "0.6.8"
indicatif = "0.16"
kzg-ceremony-crypto = { path = "./crypto"}
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.87"

