[package]
version = "0.1.0"
name = "kzg-ceremony-crypto"
description = "Implementation of the ethereum kzg cermony spec cryptography"
authors = ["Carl Beekhuizen <@CarlBeek>"]
edition = "2021"
homepage = "https://github.com/ethereum/kzg-ceremony-sequencer"
repository = "https://github.com/ethereum/kzg-ceremony-sequencer"
keywords = ["cryptography"]
categories = ["cryptography::cryptocurrencies"]
readme = "Readme.md"
license-file = "../mit-license.md"

[dependencies]
blst = { version = "0.3.11"}
digest = "0.10"
ethers-core = { version = "1.0.0", features = ["eip712"] }
hex = "0.4.3"
hex-literal = "0.3.4"
hkdf = "0.12.3"
indicatif = "0.16"
rand = "0.8.5"
rayon = "1.5.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sha2 = "0.10"
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.34"
tracing = "0.1.36"

[dev-dependencies]
proptest = "1.0.0"
ruint = { version = "1.5.0", features = ["ark-ff", "proptest"] }
